<resources>
    <string name="translators">amitskr &amp; vivekajee</string>
    <string name="locale">English</string>
    <string name="txt_info">This app acts as an intermediary when opening clicked URL links. A dialog with some info about the link is shown when choosing this app to open it. Press the module button below to check and configure all available modules.</string>
    <string name="txt_sample">Press the link below to test it:</string>
    <string name="a_modules">Modules</string>
    <string name="a_settings">Settings</string>
    <string name="a_about">About</string>
    <string name="txt_about">"App created by Amit &amp; Vivek.

Contributions: %s.
Translations: %s."</string>
    <string name="link_blog">"Amit &amp; Vivek's blog"</string>
    <string name="link_changelog">Changelog</string>
    <string name="link_source">Source code</string>
    <string name="link_privacy">Privacy policy</string>
    <string name="txt_conf">Here are all the available modules, where you can check their description and settings. You can also reorder, toggle the title visibility and enable/disable them.</string>
    <string name="toast_cantEnable">"Can't enable the module, missing configuration?"</string>
    <string name="menu_resetOrder">Reset order</string>
    <string name="menu_toggleDecorations">Toggle all titles</string>
    <string name="desc_up">Move up</string>
    <string name="desc_down">Move down</string>
    <string name="desc_decorations">Show/hide title</string>
    <string name="desc_enable">Enable/disable module</string>
    <string name="txt_openLinks">Open links on this app: Over the years Android has changed the way to configure it, and differs between versions. Find below all available settings for your device, if links are not being opened on this app try them all.</string>
    <string name="btn_setBrowser">Set as default browser</string>
    <string name="toast_defaultSet">The app is now the default web browser</string>
    <string name="btn_configureBrowser">Default web browser</string>
    <string name="btn_linksSettings">Open supported links</string>
    <string name="btn_androidSettings">Android app settings</string>
    <string name="txt_theme">Theme:</string>
    <string name="spin_darkTheme">Dark</string>
    <string name="spin_lightTheme">Light</string>
    <string name="txt_locale">Locale:</string>
    <string name="btn_tutorialSettings">Repeat tutorial</string>
    <string name="tutorial">Tutorial</string>
    <string name="txt_tutorial1">"Thanks for downloading the app!

This is the tutorial, if you want to skip it you can do so with the button below. You can always come back to this tutorial from the settings menu."</string>
    <string name="txt_tutorial2">The app acts as an intermediary when opening or sharing url links. Once an url is sent to the app you can interact with it via the modules. After that you can open the link (in the app you want), share it or copy it to the clipboard.</string>
    <string name="txt_tutorial3">Set the app as the default web browser to intercept URLs when opening them.
\n(Not needed if URLs are redirected using the “Share” functionality.)</string>
    <string name="txt_tutorial4">Modules is how the app interacts with the URLs.
\nEach of the modules has a specific function. Usually to present info about the URL, or allowing it to be modified.
\nRead about them and set them up as needed.
\n
\nImportant: All the actions are manual by default. The app won\'t modify anything nor connect to the Internet unless you specifically allow it, but some actions can be auto-applied if desired.
\n
\nOpen the list of modules from the main screen, or by tapping the button below.</string>
    <string name="txt_tutorial5">"That's all. Here are some tips that can be useful:

When an app doesn't give you a way to open or share a url, but it gives you a way to do the other you can solve the issue using this app. You can also copy the url to the clipboard by long pressing the share button.

There are some urls which its only purpose is redirecting you to another url. If the final url can be opened in an app, then you can avoid opening it in a browser.

Hope you find the app useful! And don't hesitate to suggest features, report bugs or even propose changes. Find all relevant links on the about screen."</string>
    <string name="btn_tutorialSkip">Skip tutorial</string>
    <string name="btn_tutorialEnd">Finish tutorial</string>
    <string name="toast_noApp">Can not open the app</string>
    <string name="toast_noBrowser">Can not open the web browser</string>
    <string name="title_choose">Choose app</string>
    <string name="toast_invalid">Invalid</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="close">Close</string>
    <string name="clear">Clear</string>
    <string name="none">None</string>
    <string name="auto">Automatic</string>
    <string name="defaultOn">Enabled by default</string>
    <string name="defaultOff">Disabled by default</string>
    <string name="alwaysOn">Always on</string>
    <string name="alwaysOff">Always off</string>
    <string name="hidden">Hidden</string>
    <string name="share">Share</string>
    <string name="canceled">Canceled</string>
    <string name="deviceDefault">Device default</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="dismiss">Dismiss</string>
    <string name="json_desc">[Beta feature] This is an advanced editor, the content must be formatted into valid JSON. You can press the top-right button to format and validate it.</string>
    <string name="json_edit">Advanced editor</string>
    <string name="shortcut_checkClipboard">Check URLs from the clipboard</string>
    <string name="mPttrn_name">Pattern checker</string>
    <string name="mPttrn_desc">"This module checks the url with regex patterns that warns, suggests or applies replacements. You can modify or create your own patterns, or even use user-created ones.
Built-in patterns include:
- Warning when contains non-ascii characters like greek letters. This can be used for phishing: googĺe.com vs google.com
- Suggest replacing 'http' with 'https'
- Suggest replacing Youtube, Reddit or Twitter with privacy-friendly alternatives [disabled by default]"</string>
    <string name="mPttrn_regexfix">Fix optional regex groups (disable if regex is not working correctly)</string>
    <string name="mPttrn_userContent">List of other useful user-created patterns: %s</string>
    <string name="mPttrn_fix">Apply</string>
    <string name="mPttrn_fixed">Applied - %s</string>
    <string name="mPttrn_ascii">Warning! Non-ASCII characters found.</string>
    <string name="mPttrn_http">HTTP link. Consider using HTTPS.</string>
    <string name="mPttrn_noSchemeHttp">Missing HTTP scheme.</string>
    <string name="mPttrn_noSchemeHttps">Missing HTTPS scheme.</string>
    <string name="mPttrn_wrongSchemaHttp">Invalid http scheme capitalization.</string>
    <string name="mPttrn_wrongSchemaHttps">Invalid https scheme capitalization.</string>
    <string name="mPttrn_ok">No matching patterns</string>
    <string name="mPttrn_editor">"Here you can edit or add new pattern. Format:
- 'encode': boolean: set to true to encode the url before checking regex.
- 'regex': string, required: a valid java regex that the url must match, otherwise the pattern is skipped.
- 'excludeRegex': string: if provided, a valid java regex that the url must not match, otherwise the pattern is skipped.
- 'replacement': string|list: if provided, the 'fix' button will run 'url=url.replaceAll(regex,replacement)'. If list, replacement will be a random element from it.
- 'decode': boolean: set to true to decode the replaced url.
- 'automatic': boolean: set to true to automatically apply the pattern.
- 'enabled': boolean: set to false to disable the pattern.
Note: if you edit the patterns, new built-in patterns from app updates will not be added automatically (you can restore them with the reset option)."</string>
    <string name="mOpen_name">Open and share</string>
    <string name="mOpen_desc">"Contains the following buttons (left to right):
- Custom Tabs button: toggle to enable/disable the custom tab feature. When enabled, the browser should be opened in a 'lite' mode.
- Incognito button: For Firefox only. Toggle to enable/disable the incognito mode. When enabled, the browser should be opened in incognito.
- Open button: Press the app name to open the link on that app. If a link can be opened with multiple apps, an arrow will be shown to let you choose.
- Copy button: Press the button to copy the link into the clipboard.
- Share button: Press the button to share the link."</string>
    <string name="mOpen_ctabs">Custom tabs:</string>
    <string name="mOpen_incognito">Incognito mode:</string>
    <string name="mOpen_closeOpen">Close dialog after opening</string>
    <string name="mOpen_closeShare">Close dialog after sharing</string>
    <string name="mOpen_closeCopy">Close dialog after copying</string>
    <string name="mOpen_perDomain">Sort different domains independently</string>
    <string name="mOpen_noReferrer">Hide the source app (referrer)</string>
    <string name="mOpen_mergeCopy">Merge Copy and Share buttons (long press to copy)</string>
    <string name="mOpen_with">Open with %s</string>
    <string name="mOpen_open">Open</string>
    <string name="mOpen_share">Share</string>
    <string name="mOpen_copyUrl">Copy</string>
    <string name="mOpen_clipboard">URL copied to clipboard</string>
    <string name="mOpen_noapps">No apps</string>
    <string name="mOpen_tabsDesc">Toggle Custom Tabs feature</string>
    <string name="mOpen_incognitoDesc">Toggle incognito mode (for Firefox only)</string>
    <string name="mStatus_name">Status code</string>
    <string name="mStatus_desc">By pressing the check button, a network request will be made to retrieve and display the site status code. If the result is a redirection, you will be able to view the destination URL. The URL content is obtained (GET), but not evaluated, so redirections based on JavaScript won\'t be detected.</string>
    <string name="mVT_tm">VirusTotal™ is a trademark of Google, Inc.</string>
    <string name="mClear_desc">This module removes tracking, referrer and other useless parameters from the URL. It also allows for common offline URL redirections.</string>
    <string name="mClear_tm">Built-in catalog copied from ClearURLs: https://docs.clearurls.xyz/latest/specs/rules/</string>
    <string name="mClear_auto">Auto-apply</string>
    <string name="mClear_toggleReferral">"Enable referral marketing (referral parameters won't be cleared)"</string>
    <string name="mClear_toggleVerbose">Enable verbose info for the matching process</string>
    <string name="mClear_updater">Updater</string>
    <string name="mClear_sourceDesc">URL of the JSON file catalog with the rules:</string>
    <string name="mClear_urlHint">Catalog URL</string>
    <string name="mClear_hashDesc">URL of the catalog hash file. If omitted, the download will not be checked to see if it was tampered/modified (not recommended)</string>
    <string name="mClear_hashHint">No hash check</string>
    <string name="mClear_autoUpdate">Update periodically</string>
    <string name="mClear_lastCheck">Last check:</string>
    <string name="mClear_lastUpdate">Last update:</string>
    <string name="mLog_desc">This module logs all checked URLs. You can view, clear or edit the full log here, no visual indication will appear on the main dialog. To disable logging, just disable the module.</string>
    <string name="mLog_view">View log</string>
    <string name="mLog_edit">Edit log</string>
    <string name="mLog_limit">Maximum number of entries to keep. Recommended value: 100. Set empty for unlimited</string>
    <string name="mLog_unlimited">Unlimited</string>
    <string name="mUnshort_tm">unshorten.me free API by Unshorten.me</string>
</resources>