<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~ *  Created by Amitskr & VnjVibhash on 2/21/24, 10:32 AM
  ~ *  Copyright Ⓒ 2024. All rights reserved Ⓒ 2024 http://vivekajee.in/
  ~ *  Last modified: 2/29/24, 1:59 PM
  ~ *
  ~ *  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file
  ~ *  except in compliance with the License. You may obtain a copy of the License at
  ~ *  http://www.apache.org/licenses/LICENS... Unless required by applicable law or agreed to in writing, software
  ~ *   distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
  ~ *   either express or implied. See the License for the specific language governing permissions and
  ~ *   limitations under the License.
  ~ */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mOpen_desc" />

    <LinearLayout
        android:id="@+id/ctabs_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/smallPadding"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/mOpen_ctabs" />

        <Spinner
            android:id="@+id/ctabs_pref"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/smallPadding"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/mOpen_incognito" />

        <Spinner
            android:id="@+id/incognito_pref"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <Switch
        android:id="@+id/closeopen_pref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/smallPadding"
        android:text="@string/mOpen_closeOpen" />

    <Switch
        android:id="@+id/closeshare_pref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/smallPadding"
        android:text="@string/mOpen_closeShare" />

    <Switch
        android:id="@+id/closecopy_pref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/smallPadding"
        android:text="@string/mOpen_closeCopy" />

    <Switch
        android:id="@+id/mergeCopy_pref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/smallPadding"
        android:text="@string/mOpen_mergeCopy" />

    <Switch
        android:id="@+id/perDomain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/smallPadding"
        android:text="@string/mOpen_perDomain" />

    <Switch
        android:id="@+id/noReferrer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/smallPadding"
        android:text="@string/mOpen_noReferrer" />

</LinearLayout>