<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~ *  Created by Amitskr & VnjVibhash on 2/21/24, 10:32 AM
  ~ *  Copyright Ⓒ 2024. All rights reserved Ⓒ 2024 http://vivekajee.in/
  ~ *  Last modified: 2/29/24, 1:59 PM
  ~ *
  ~ *  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file
  ~ *  except in compliance with the License. You may obtain a copy of the License at
  ~ *  http://www.apache.org/licenses/LICENS... Unless required by applicable law or agreed to in writing, software
  ~ *   distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
  ~ *   either express or implied. See the License for the specific language governing permissions and
  ~ *   limitations under the License.
  ~ */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mClear_sourceDesc" />

    <EditText
        android:id="@+id/catalog_URL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/mClear_urlHint"
        android:inputType="textUri|none|text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mClear_hashDesc" />

    <EditText
        android:id="@+id/hash_URL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/mClear_hashHint"
        android:inputType="textUri|none|text" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding" />

    <Switch
        android:id="@+id/autoUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mClear_autoUpdate" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mClear_lastCheck" />

        <Space
            android:layout_width="@dimen/smallPadding"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

        <TextView
            android:id="@+id/last_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mClear_lastUpdate" />

        <Space
            android:layout_width="@dimen/smallPadding"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/last_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>