<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~ *  Created by Amitskr & VnjVibhash on 2/21/24, 10:32 AM
  ~ *  Copyright Ⓒ 2024. All rights reserved Ⓒ 2024 http://vivekajee.in/
  ~ *  Last modified: 2/29/24, 1:59 PM
  ~ *
  ~ *  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file
  ~ *  except in compliance with the License. You may obtain a copy of the License at
  ~ *  http://www.apache.org/licenses/LICENS... Unless required by applicable law or agreed to in writing, software
  ~ *   distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
  ~ *   either express or implied. See the License for the specific language governing permissions and
  ~ *   limitations under the License.
  ~ */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mPttrn_desc" />

    <Button
        android:id="@+id/edit"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/json_edit" />

    <Switch
        android:id="@+id/regex_fix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mPttrn_regexfix" />

    <TextView
        android:id="@+id/user_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mPttrn_userContent"
        android:autoLink="web" />
</LinearLayout>